objects/Events_Exhibitions__c.object
<CustomObject>
    <description>Events Management.</description>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <description>Fiscal year the event/exhibition is taking place.</description>
        <inlineHelpText>Please select the fiscal year the event/exhibition is taking place.</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>FY15</fullName>
                </value>
                <value>
                    <fullName>FY16</fullName>
                </value>
                <value>
                    <fullName>FY17</fullName>
                </value>
                <value>
                    <fullName>FY18</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Literature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Literaure</label>
        <referenceTo>Events_Exhibitions__c</referenceTo>
        <relationshipLabel>Events/Exhbitions</relationshipLabel>
        <relationshipName>Events_Exhbitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Management_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Management Leader</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_Exhbitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Select contact who is assisting with this event/exhibition.</description>
        <inlineHelpText>Please select the person who is assisting with this exhibion.</inlineHelpText>
        <label>Marketing Contact</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dalia Babou</fullName>
                </value>
                <value>
                    <fullName>Estelle Bethaz</fullName>
                </value>
                <value>
                    <fullName>Juliette Delforge</fullName>
                </value>
                <value>
                    <fullName>Julie Alsua</fullName>
                </value>
                <value>
                    <fullName>Tracie McLaughlin</fullName>
                </value>
                <value>
                    <fullName>Noelle Marino</fullName>
                </value>
                <value>
                    <fullName>Rhonda Wood</fullName>
                </value>
                <value>
                    <fullName>Keith Myers</fullName>
                </value>
                <value>
                    <fullName>Frenky Lin</fullName>
                </value>
                <value>
                    <fullName>Elva Ng</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TE_Sales_person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TE Sales person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Events_Exhbitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Events/Exhibitions</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Events/Exhibitions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events/Exhibitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>